examples/migration-cli/tests/snapshots/embedded__embedded-3.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: "migs[0].down"
---
REMOVE TABLE crop;
REMOVE TABLE migration;
REMOVE TABLE animal;
REMOVE TABLE planet;
REMOVE TABLE student;
REMOVE TABLE eats;
