examples/migration-cli/tests/snapshots/embedded__migrations.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: "defs.join(\"\\n\")"
---
DEFINE TABLE animal SCHEMAFULL;
DEFINE TABLE crop SCHEMAFULL;
DEFINE TABLE eats SCHEMAFULL;
DEFINE TABLE migration SCHEMAFULL;
DEFINE TABLE planet SCHEMAFULL;
DEFINE TABLE student SCHEMAFULL;
