examples/migration-cli/tests/snapshots/embedded__oneway_migrations-6.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "color": "DEFINE FIELD color ON crop TYPE string",
        "id": "DEFINE FIELD id ON crop TYPE record<crop>",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
