examples/migration-cli/tests/snapshots/embedded__oneway_migrations_embedded.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: "migs[0].content"
---
DEFINE TABLE crop SCHEMAFULL;
DEFINE FIELD color ON crop TYPE string;
DEFINE FIELD id ON crop TYPE record<crop>;
DEFINE TABLE animal SCHEMAFULL;
DEFINE FIELD updatedAt ON animal TYPE datetime;
DEFINE FIELD id ON animal TYPE record<animal>;
DEFINE FIELD attributes ON animal TYPE array;
DEFINE FIELD species ON animal TYPE string;
DEFINE FIELD createdAt ON animal TYPE datetime;
DEFINE FIELD velocity ON animal TYPE int;
DEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE;
DEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats);
DEFINE EVENT event1 ON animal WHEN species = 'Homo Erectus' AND velocity > 545 THEN (SELECT * FROM crop);
DEFINE TABLE migration SCHEMAFULL;
DEFINE FIELD id ON migration TYPE record<migration>;
DEFINE FIELD timestamp ON migration TYPE int;
DEFINE FIELD name ON migration TYPE string;
DEFINE TABLE student SCHEMAFULL;
DEFINE FIELD updatedAt ON student TYPE datetime;
DEFINE FIELD createdAt ON student TYPE datetime;
DEFINE FIELD age ON student TYPE int;
DEFINE FIELD id ON student TYPE record<student>;
DEFINE FIELD university ON student TYPE string;
DEFINE TABLE planet SCHEMAFULL;
DEFINE FIELD createdAt ON planet TYPE datetime;
DEFINE FIELD id ON planet TYPE record<planet>;
DEFINE FIELD updatedAt ON planet TYPE datetime;
DEFINE FIELD population ON planet TYPE int;
DEFINE FIELD tags ON planet TYPE array;
DEFINE FIELD firstName ON planet TYPE string;
DEFINE TABLE eats SCHEMAFULL;
DEFINE FIELD id ON eats TYPE record<eats>;
DEFINE FIELD createdAt ON eats TYPE datetime;
DEFINE FIELD in ON eats TYPE record;
DEFINE FIELD out ON eats TYPE record;
DEFINE FIELD place ON eats TYPE string;
