examples/migration-cli/tests/snapshots/embedded__twoway_migrations-15.snap
---
source: examples/migration-cli/tests/embedded.rs
expression: up_mig
---
[
    "DEFINE TABLE animal SCHEMAFULL;\nDEFINE FIELD updatedAt ON animal TYPE datetime;\nDEFINE FIELD id ON animal TYPE record<animal>;\nDEFINE FIELD createdAt ON animal TYPE datetime;\nDEFINE FIELD species ON animal TYPE string;\nDEFINE FIELD velocity ON animal TYPE int;\nDEFINE FIELD attributes ON animal TYPE array;\nDEFINE INDEX species_speed_idx ON animal FIELDS species, velocity UNIQUE;\nDEFINE EVENT event1 ON animal WHEN species = 'Homo Erectus' AND velocity > 545 THEN (SELECT * FROM crop);\nDEFINE EVENT event2 ON animal WHEN (species = 'Homo Sapien') AND (velocity < 10) THEN (SELECT * FROM eats);\nDEFINE TABLE planet SCHEMAFULL;\nDEFINE FIELD createdAt ON planet TYPE datetime;\nDEFINE FIELD labels ON planet TYPE array;\nDEFINE FIELD firstName ON planet TYPE string;\nDEFINE FIELD population ON planet TYPE int;\nDEFINE FIELD id ON planet TYPE record<planet>;\nDEFINE FIELD updatedAt ON planet TYPE datetime;\nDEFINE TABLE crop SCHEMAFULL;\nDEFINE FIELD id ON crop TYPE record<crop>;\nDEFINE FIELD color ON crop TYPE string;\nDEFINE TABLE student SCHEMAFULL;\nDEFINE FIELD createdAt ON student TYPE datetime;\nDEFINE FIELD age ON student TYPE int;\nDEFINE FIELD updatedAt ON student TYPE datetime;\nDEFINE FIELD id ON student TYPE record<student>;\nDEFINE FIELD university ON student TYPE string;\nDEFINE TABLE migration SCHEMAFULL;\nDEFINE FIELD timestamp ON migration TYPE int;\nDEFINE FIELD name ON migration TYPE string;\nDEFINE FIELD id ON migration TYPE record<migration>;\nDEFINE TABLE eats SCHEMAFULL;\nDEFINE FIELD id ON eats TYPE record<eats>;\nDEFINE FIELD in ON eats TYPE record;\nDEFINE FIELD place ON eats TYPE string;\nDEFINE FIELD out ON eats TYPE record;\nDEFINE FIELD createdAt ON eats TYPE datetime;",
]
